--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,8 @@
-<ul class="nav">
-  <li><%= link_to 'Derechos reservados'%></li>
-  <%= render 'layouts/navigation_links' %>
-</ul>
+<footer class="row">
+  <section class="small-4 columns">
+    Copyright 2013
+  </section>
+  <section class="small-8 columns">
+    All rights reserved.
+  </section>
+</footer>
